@@ -20,45 +20,44 @@ import org.jetbrains.annotations.NotNull;
 
 @OnlyIn(Dist.CLIENT)
 public class DriveRenderer<T extends EntityDrive> extends EntityRenderer<T> {
-
+    
     private static final ResourceLocation TEXTURE = SlashBlade.prefix("model/util/ss.png");
     private static final ResourceLocation MODEL = SlashBlade.prefix("model/util/drive.obj");
-
+    
     @Override
     public @NotNull ResourceLocation getTextureLocation(T entity) {
         return entity.getTextureLoc();
     }
-
+    
     public DriveRenderer(EntityRendererProvider.Context context) {
         super(context);
     }
-
+    
     @Override
     public void render(T entity, float entityYaw, float partialTicks, PoseStack matrixStack, @NotNull MultiBufferSource bufferIn,
                        int packedLightIn) {
-
-        try (MSAutoCloser msac = MSAutoCloser.pushMatrix(matrixStack)) {
+        
+        try (MSAutoCloser ignored = MSAutoCloser.pushMatrix(matrixStack)) {
             float lifetime = entity.getLifetime();
             double deathTime = lifetime;
-            double baseAlpha = (Math.min(deathTime, Math.max(0, (lifetime - (entity.tickCount))))
-                    / deathTime);
+            double baseAlpha = (Math.clamp(lifetime - (entity.tickCount), 0, deathTime) / deathTime);
             baseAlpha = Math.max(0, -Math.pow(baseAlpha - 1, 4.0) + 0.75);
-
+            
             matrixStack.mulPose(
-                    Axis.YP.rotationDegrees(Mth.rotLerp(partialTicks, entity.yRotO, entity.getYRot()) - 90.0F));
+                Axis.YP.rotationDegrees(Mth.rotLerp(partialTicks, entity.yRotO, entity.getYRot()) - 90.0F));
             matrixStack.mulPose(Axis.ZP.rotationDegrees(Mth.rotLerp(partialTicks, entity.xRotO, entity.getXRot())));
             matrixStack.mulPose(Axis.XP.rotationDegrees(entity.getRotationRoll()));
-
+            
             float scale = 0.015f;
             matrixStack.scale(scale, scale, scale);
             matrixStack.mulPose(Axis.YP.rotationDegrees(90.0F));
             int color = entity.getColor() & 0xFFFFFF;
             int alpha = ((0xFF & (int) (0xFF * baseAlpha)) << 24);
             WavefrontObject model = BladeModelManager.getInstance().getModel(MODEL);
-
+            
             BladeRenderState.setCol(color | alpha);
             BladeRenderState.renderOverridedLuminous(ItemStack.EMPTY, model, "base", TEXTURE, matrixStack, bufferIn,
-                    packedLightIn);
+                packedLightIn);
         }
     }
 }
